// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchFacets /> Test component snapshot 1`] = `
"<Fragment>
  <div id=\\"searchFacetsGroups\\">
    <Connect(SearchFacetsFeedsGroup) />
    <Connect(SearchFacetsGroup) groupKey=\\"tenants.categories_id\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"tenants.tags\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"channel_type_id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"media_id\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"language_id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"country_path\\" groupItems={{...}} />
  </div>
</Fragment>"
`;

exports[`<SearchFacets /> Test component snapshot with show more facet group key 1`] = `
"<Fragment>
  <div id=\\"searchFacetsGroups\\">
    <Connect(SearchFacetsFeedsGroup) />
    <Connect(SearchFacetsGroup) groupKey=\\"tenants.categories_id\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"tenants.tags\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"channel_type_id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"media_id\\" groupItems={[undefined]} />
    <Connect(SearchFacetsGroup) groupKey=\\"language_id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"country_path\\" groupItems={{...}} />
  </div>
  <Connect(SearchFacetsDialog) groupKey=\\"channel_type_id\\" />
</Fragment>"
`;

exports[`<SearchFacets /> Test component snapshot without focus list with article behaviour 1`] = `
"<Fragment>
  <div id=\\"searchFacetsGroups\\">
    <CircularProgress id=\\"searchFacetsGroupsLoading\\" style={{...}} scale={1} determinateDashoffset={187} centered={true} />
  </div>
</Fragment>"
`;

exports[`<SearchFacets /> Test component snapshot without focus list with definition behaviour 1`] = `
"<Fragment>
  <div id=\\"searchFacetsGroups\\">
    <Connect(SearchFacetsGroup) groupKey=\\"channel_type_id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"language.id\\" groupItems={{...}} />
    <Connect(SearchFacetsGroup) groupKey=\\"country_path\\" groupItems={{...}} />
  </div>
</Fragment>"
`;

exports[`<SearchFacets /> Test with empty facets 1`] = `
"<Fragment>
  <div id=\\"searchFacetsGroups\\">
    <Connect(SearchFacetsFeedsGroup) />
  </div>
</Fragment>"
`;
